Add coaching info component

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -19,7 +19,7 @@ $r-bg2: $r-black2;
 $r-t1: $r-white;
 $r-t2: $r-white2;
 $r-d1: $r-red;
-$r-d2: $r-red;
+$r-d2: $r-yellow;
 
 // $custom-colors: (
 // "r-bg1": $r-black,
