--- a/src/scss/testamonials.scss
+++ b/src/scss/testamonials.scss
@@ -1,51 +1,46 @@
 @import "./custom.scss";
 
 .title1 {
-  color: white;
-  //   background-color: red;
+  color: $r-t1;
 }
 
 .test-card {
-  background-color: aliceblue;
-  //   color: aqua;
+  //   border: 0.5rem solid $r-d1;
 }
 
-.card-body {
-  //   background-color: rgb(62, 128, 128);
+blockquote {
+  min-height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-block: 2rem;
+  padding-inline: 2rem;
 }
 
-p {
-  //   background-color: aqua;
+blockquote > p {
+  font-size: 1rem;
 }
-
 .blockquote-footer {
-  background-color: red;
-  color: red;
+  color: $r-d2;
 }
 
-.carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23aaa'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+.name {
+  color: $r-d2;
 }
 
-.carousel-indicators {
-  background-color: green;
-
-  color: red;
+.blockquote-footer::before {
+  //   text-decoration: none;
+  color: $r-d2;
 }
 
-.carousel-control-prev {
-  background-color: green;
-}
-.carousel-control-prev {
-  background-color: green;
+.carousel-inner {
+  //   border: solid gold 2px;
 }
 
-.carousel-control-prev-icon {
-  color: red;
-
-  background-color: r-d1;
+.image-container {
+  display: flex;
+  justify-content: center;
 }
-
-button {
-  background-color: yellow;
+.image-container > img {
+  width: 90%;
 }
