--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -21,6 +21,8 @@ $r-t2: $r-white2;
 $r-d1: $r-red;
 $r-d2: $r-yellow;
 
+$nav-height: 3rem;
+
 // $custom-colors: (
 // "r-bg1": $r-black,
 // "r-bg2": $r-black2,
