--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -4,20 +4,43 @@
   margin-inline: 5vw;
 }
 
-.accordion {
-  background-color: transparent;
-  border: none;
+// Add base line colour to accordion
+h2.accordion-header {
+  border-bottom: solid 1px #d15f54;
+  // box-shadow: 0px 1px 0px #29913a;
+}
+.accordion-body {
+  border-bottom: solid 1px #d15f54;
 }
 
-.accordion-header {
-  border: none;
-}
+// Use custom hex to change drop down for accordion
+$r-yellow-icon: #ffe184aa;
 
-.accordion-item {
-  border: none;
-}
+// Setting accordion to remove colours/boarder...
+.accordion.accordion-flush {
+  --bs-accordion-color: #{$r-d2};
+  --bs-accordion-bg: #{$r-bg1};
+  --bs-accordion-transition: color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+  --bs-accordion-border-color: none;
+  --bs-accordion-border-width: 1px;
+  --bs-accordion-border-radius: 0px;
+  --bs-accordion-inner-border-radius: 0;
+  --bs-accordion-btn-padding-x: 1.25rem;
+  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-btn-color: none;
+  --bs-accordion-btn-bg: none;
+  --bs-accordion-btn-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$r-yellow-icon}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
+  --bs-accordion-btn-icon-width: 1.25rem;
+  --bs-accordion-btn-icon-transform: rotate(-180deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$r-yellow-icon}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 
-.accordion-header > button {
-  background-color: transparent;
-  color: $r-t1;
+  --bs-accordion-btn-focus-border-color: none;
+  --bs-accordion-btn-focus-box-shadow: none;
+  --bs-accordion-body-padding-x: 1.35rem;
+  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-active-color: var(--bs-accordion-color);
+  --bs-accordion-active-bg: none;
 }
