--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,12 @@ nav {
   background-color: $r-bg1;
 }
 
+.title {
+  color: $r-t1;
+  font-weight: 500;
+  text-shadow: rgb(0, 0, 0) 0px 0 3px;
+}
+
 .jumptarget:before {
   display: block;
   content: " ";
