--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,13 @@
   box-sizing: border-box;
   // background-color: $r-bg1;
   color: $r-t2;
+  font-family: "Nunito", sans-serif;
+  // font-family: "Quicksand", sans-serif;
+  // font-family: "Readex Pro", sans-serif;
+  // font-family: "Roboto", sans-serif;
+  // font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  // letter-spacing: -0.02em;
 }
 
 body {
@@ -16,10 +23,20 @@ nav {
   background-color: $r-bg1;
 }
 
+.brand-text {
+  font-family: "Quicksand", sans-serif;
+  font-family: "Nunito", sans-serif;
+}
+
 .title {
   color: $r-t1;
-  font-weight: 500;
+  font-weight: 400;
   text-shadow: rgb(0, 0, 0) 0px 0 3px;
+}
+
+.sub-text {
+  // font-weight: 300;
+  letter-spacing: 0.02em;
 }
 
 .jumptarget:before {
