--- a/src/index.scss
+++ b/src/index.scss
@@ -70,8 +70,10 @@ nav {
   position: absolute;
   top: 3%;
   text-align: center;
-  color: $r-bg1;
+  color: black;
   font-weight: 600;
+  // text-shadow: rgb(0, 0, 0) 0px 0 3px;
+
   font-size: 1.3rem;
   line-height: 2rem;
   width: 80%;
