--- a/src/index.scss
+++ b/src/index.scss
@@ -60,7 +60,7 @@ nav {
   background-position: 50% 25%;
   background-size: cover;
   background-repeat: no-repeat;
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   justify-content: center;
   position: relative;
@@ -77,4 +77,12 @@ nav {
   font-size: 1.3rem;
   line-height: 2rem;
   width: 80%;
+}
+
+hr {
+  // background-color: $r-d1;
+  border: 0 none;
+  border-top: $r-t2 solid 1px;
+  height: 0px;
+  opacity: 100%;
 }
