--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -8,7 +8,7 @@
   background-size: 100%;
   background-position: 50% 40%;
   background-repeat: no-repeat;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 
 .welcome {
