Add broken height to navbar

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -8,6 +8,8 @@
 
 // Create RENASCENCE brand map
 $r-yellow: #ffe184;
+$r-yellow-icon: #ffe184ee;
+$r-red-icon: #d15f54ee;
 $r-red: #d15f54;
 $r-black: #333333;
 $r-black2: #222222;
