--- a/src/index.scss
+++ b/src/index.scss
@@ -19,13 +19,12 @@ body {
   background-color: $r-bg1;
 }
 
-nav {
-  background-color: $r-bg1;
-}
-
 .brand-text {
   font-family: "Quicksand", sans-serif;
   font-family: "Nunito", sans-serif;
+  font-weight: 500;
+  font-size: 1.8rem;
+  text-align: center;
 }
 
 .title {
@@ -45,15 +44,6 @@ nav {
   margin-top: -$nav-height;
   height: $nav-height;
   visibility: hidden;
-}
-
-.navbar-responsive {
-  height: calc($nav-height + 10px);
-}
-
-.nav-container {
-  display: flex;
-  flex-direction: row;
 }
 
 .image-container {
