--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -23,7 +23,15 @@ $r-t2: $r-white2;
 $r-d1: $r-red;
 $r-d2: $r-yellow;
 
+// FONTS
+// testmonials main: 1rem
+// testamonials footer: 0.875rem
+//
+$size1: 1rem;
+
 $nav-height: 3rem;
+
+$bp1: 5vw;
 
 // $custom-colors: (
 //   "r-bg1": $r-black,
