Edit/Clean CSS for navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,9 @@ body {
   // font-family: "Nunito", sans-serif;
   font-weight: 500;
   font-size: 1.8rem;
-  text-align: center;
+  // text-align: end;
+  padding: none;
+  margin: none;
 }
 
 .image-text {
