--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -14,7 +14,7 @@ $r-red: #d15f54;
 $r-black: #333333;
 $r-black2: #222222;
 $r-white: #ffe184;
-$r-white2: #e0e0e0;
+$r-white2: #eae9e9;
 
 $r-bg1: $r-black;
 $r-bg2: $r-black2;
@@ -22,6 +22,8 @@ $r-t1: $r-yellow;
 $r-t2: $r-white2;
 $r-d1: $r-red;
 $r-d2: $r-yellow;
+
+// salamander circle text #C4BE90
 
 // FONTS
 // testmonials main: 1rem
