--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -3,10 +3,10 @@
 .backgroundImage {
   // 444 Add circle logo to replace.
   // must have red text bg
-  background-image: url("../assets/r-logo.png");
-  background-color: black;
+  background-image: url("https://res.cloudinary.com/sam-renascence/image/upload/v1/images/salamander-circle-yellow_ifhgxt?_a=AJE+xWI0");
+  // background-color: black;
   background-size: 100%;
-  background-position: 50% 40%;
+  background-position: 50% 50%;
   background-repeat: no-repeat;
   // border: 1px solid red;
 }
@@ -14,7 +14,12 @@
 .welcome {
   margin-inline: 5vw;
   padding-top: calc($nav-height + 10px);
+
   //   position: relative;
+}
+
+.backgroundImage-overlay {
+  background-color: #333333cc;
 }
 
 .logo {
