--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -4,7 +4,7 @@
   // 444 Add circle logo to replace.
   // must have red text bg
   background-image: url("https://res.cloudinary.com/sam-renascence/image/upload/v1/images/salamander-circle-yellow_ifhgxt?_a=AJE+xWI0");
-  // background-color: black;
+  background-color: black;
   background-size: 100%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
