--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -13,7 +13,7 @@
 
 .welcome {
   margin-inline: 5vw;
-  padding-top: calc($nav-height + 10px);
+  padding-top: calc($nav-height + 2rem);
 
   //   position: relative;
 }
