--- a/src/index.scss
+++ b/src/index.scss
@@ -78,9 +78,9 @@ body {
   // 444 set height the same as welcome section or coaching section?
   height: 400px;
   // 444 Change image to Cloudinary
-  background-image: url("./assets/res-waitingRoom.png");
+  background-image: url("https://res.cloudinary.com/sam-renascence/image/upload/v1/images/waiting-yellow_xnswzh?_a=AJE+xWI0");
   background-color: black;
-  background-position: 50% 25%;
+  background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
   // border: 1px solid red;
