--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -18,7 +18,9 @@ h2.accordion-header {
 }
 
 .accordion-header > button {
-  text-shadow: rgb(0, 0, 0) 0 0 5px;
+  text-shadow: rgb(0, 0, 0) 0 0 4px;
+  font-size: $size1;
+  font-weight: 400;
 }
 
 // Setting accordion to remove colours/boarder...
