--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,7 +1,30 @@
+@import "./custom.scss";
 .contact {
   margin-inline: 5vw;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+
 .contact-grid {
   display: flex;
   flex-direction: column;
+}
+
+.contact-grid > input,
+.contact-grid > textarea {
+  border-radius: 0.2rem;
+  border: none;
+  background-color: rgb(65, 65, 65);
+}
+
+.form > button {
+  background-color: $r-d1;
+  color: $r-t2;
+  font-size: 1rem;
+  font-weight: 400;
+  border-radius: 0.3rem;
 }
