Refactor margin to bp1

--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -4,7 +4,7 @@
 // $r-yellow-icon: #d15f54ee;
 
 .pricing {
-  margin-inline: 5vw;
+  margin-inline: $bp1;
 }
 
 // Add base line colour to accordion
