--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -12,7 +12,7 @@
 }
 
 .welcome {
-  margin-inline: 5vw;
+  margin-inline: $bp1;
   padding-top: calc($nav-height + 1.5rem);
 
   //   position: relative;
