--- a/src/scss/bookBtn.scss
+++ b/src/scss/bookBtn.scss
@@ -14,7 +14,7 @@
   font-weight: 400;
   // text-shadow: rgba(0, 0, 0, 0.527) 0px 0 0px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 5px 2px;
-  border: $r-d1 solid 3px;
+  border: 0.8px solid gray;
 }
 
 .text-center > a,
