--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -27,4 +27,6 @@
   font-size: 1rem;
   font-weight: 400;
   border-radius: 0.3rem;
+  border: 0.8px solid gray;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 5px 2px;
 }
