--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  background-color: #222222dd;
+  padding: 20px;
+  border-radius: 0.4rem;
 }
 
 .contact-grid {
@@ -16,16 +19,23 @@
 
 .contact-grid > input,
 .contact-grid > textarea {
-  border-radius: 0.2rem;
+  height: 2rem;
+  margin-top: 0.2rem;
+  border-radius: 0.3rem;
   border: none;
   background-color: rgb(65, 65, 65);
+}
+
+.contact-grid > textarea {
+  height: 6rem;
 }
 
 .form > button {
   background-color: $r-d1;
   color: $r-t2;
-  font-size: 1rem;
+  font-size: $size1;
   font-weight: 400;
+  height: 2rem;
   border-radius: 0.3rem;
   border: 0.8px solid gray;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 5px 2px;
