--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-  background-color: #222222dd;
+  background-color: $r-bg2;
   padding: 20px;
   border-radius: 0.4rem;
 }
