--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -13,13 +13,12 @@ $r-red-icon: #d15f54ee;
 $r-red: #d15f54;
 $r-black: #333333;
 $r-black2: #222222;
-$r-white: #ffe184;
-$r-white2: #eae9e9;
+$r-white: #eae9e9;
 
 $r-bg1: $r-black;
 $r-bg2: $r-black2;
 $r-t1: $r-yellow;
-$r-t2: $r-white2;
+$r-t2: $r-white;
 $r-d1: $r-red;
 $r-d2: $r-yellow;
 
