Add Footer contents

--- a/src/scss/pricing.scss
+++ b/src/scss/pricing.scss
@@ -19,6 +19,7 @@ h2.accordion-header {
 
 .accordion-header > button {
   text-shadow: rgb(0, 0, 0) 0 0 4px;
+  // color: $r-t1;
   font-size: $size1;
   font-weight: 400;
 }
