--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,4 +2,19 @@
 
 .footer {
   margin-inline: $bp1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer-text {
+  font-weight: 300;
+  font-size: 1rem;
+  text-align: end;
+  // align-items: center;
+}
+
+.footer-text > a {
+  // text-decoration: none;
+  color: $r-t2;
 }
