--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -28,6 +28,7 @@ $r-d2: $r-yellow;
 // testmonials main: 1rem
 // testamonials footer: 0.875rem
 //
+$size0: 1rem;
 $size1: 1.15rem;
 
 $nav-height: 4rem;
