--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -21,6 +21,7 @@
 .contact-grid > textarea {
   height: 2rem;
   margin-top: 0.2rem;
+  padding: 0.5rem;
   border-radius: 0.3rem;
   border: none;
   background-color: rgb(65, 65, 65);
