--- a/src/scss/testamonials.scss
+++ b/src/scss/testamonials.scss
@@ -18,7 +18,8 @@
 
 // For Card Default
 .add-flex {
-  height: 25rem;
+  min-height: 20rem;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,6 +27,7 @@
 blockquote {
   // padding-block: 5rem;
   padding-inline: 2rem;
+  padding-block: 1rem;
 }
 
 // For Text Area
