--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -1,21 +1,16 @@
 @import "./custom.scss";
 
 .backgroundImage {
-  // 444 Add circle logo to replace.
-  // must have red text bg
   background-image: url("https://res.cloudinary.com/sam-renascence/image/upload/v1/images/salamander-circle-yellow_ifhgxt?_a=AJE+xWI0");
   background-color: black;
   background-size: 100%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  // border: 1px solid red;
 }
 
 .welcome {
   margin-inline: $bp1;
   padding-top: calc($nav-height + 1.5rem);
-
-  //   position: relative;
 }
 
 // For button
@@ -27,9 +22,23 @@
   background-color: #333333cc;
 }
 
-.logo {
-  //   position: absolute;
-  top: 0;
-  left: 0;
-  width: 5rem;
+// On expansion
+.welcome-flex {
+  @include media-breakpoint-up(md) {
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: $bp1;
+  }
+}
+.welcome-textbox {
+  @include media-breakpoint-up(md) {
+    width: 45vw;
+  }
+}
+.welcome-iframe-second {
+  @include media-breakpoint-up(md) {
+    width: 45vw;
+  }
 }
