Add break point to testamonials

--- a/src/scss/testamonials.scss
+++ b/src/scss/testamonials.scss
@@ -2,6 +2,9 @@
 
 .testamonials {
   margin-inline: $bp1;
+  @include media-breakpoint-up(xl) {
+    margin-inline: $bp2;
+  }
 }
 
 // Move Arrows Out More
