--- a/src/scss/howItWorks.scss
+++ b/src/scss/howItWorks.scss
@@ -2,6 +2,9 @@
 
 .howItWorks {
   margin-inline: $bp1;
+  @include media-breakpoint-up(xl) {
+    margin-inline: $bp2;
+  }
 }
 
 .carousel-caption > p {
@@ -25,4 +28,23 @@
   display: inline-block; /* Needed to add space between the bullet and the text */
   width: 1.3rem; /* Also needed for space (tweak if needed) */
   margin-left: -1rem; /* Also needed for space (tweak if needed) */
+}
+
+@include media-breakpoint-up(xl) {
+  .howItWorks-flex {
+    display: flex;
+    justify-content: space-between;
+    gap: 5vw;
+  }
+  .howItWorks-f2 > img {
+    width: 35vw;
+  }
+  .howItWorks-f1 {
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+    justify-content: center;
+    // For button alignment
+    align-items: flex-start;
+  }
 }
