--- a/src/index.scss
+++ b/src/index.scss
@@ -106,12 +106,60 @@ hr {
     margin-inline: $bp2;
   }
 }
-.pricingContact-flex {
-  display: flex;
+
+@include media-breakpoint-up(md) {
+  .pricingContact-flex {
+    // margin-inline: $bp1;
+    position: relative;
+    display: flex;
+    margin-inline: $bp1;
+  }
+  .pricingContact-overlay {
+    position: absolute;
+    margin-inline: -5vw;
+    background-image: url("https://res.cloudinary.com/sam-renascence/image/upload/v1/images/salamander-circle-yellow_ifhgxt?_a=AJE+xWI0");
+    background-color: black;
+    background-size: 50%;
+    background-position: center 5rem;
+    background-repeat: no-repeat;
+    z-index: -20;
+    width: 100vw;
+    height: 100%;
+  }
+  .pricingContact-grey {
+    position: absolute;
+    margin-inline: -5vw;
+    background-color: #333333cc;
+    z-index: -9;
+    width: 100vw;
+    height: 100%;
+  }
+  .pricing-flex,
+  .contact-flex {
+    padding-block: 1rem;
+    width: 50%;
+  }
+  .accordion-item {
+    background-color: $r-bg2;
+  }
+  .accordion-item-override1 {
+    border-radius: 0.4rem 0.4rem 0 0 !important;
+  }
+
+  .accordion-item-override3 {
+    border-radius: 0 0 0.4rem 0.4rem !important;
+    border-bottom: none !important;
+  }
+
+  .accordion-body {
+    border-top: solid 0px $r-t2;
+    border-bottom: solid 0px $r-t2;
+  }
+  h2.accordion-header {
+    border-bottom: solid 0px $r-t2;
+    // box-shadow: 0px 1px 0px #29913a;
+    text-shadow: rgb(0, 0, 0) 0px 0 10px;
+  }
 }
 
-.pricing-flex,
-.contact-flex {
-  width: 50%;
-}
 // .contact-flex
