--- a/src/index.scss
+++ b/src/index.scss
@@ -88,6 +88,9 @@ body {
   display: flex;
   justify-content: center;
   position: relative;
+  @include media-breakpoint-up(md) {
+    background-position: 50% 35%;
+  }
 }
 
 // .image-container > p {
@@ -119,8 +122,8 @@ hr {
     margin-inline: -5vw;
     background-image: url("https://res.cloudinary.com/sam-renascence/image/upload/v1/images/salamander-circle-yellow_ifhgxt?_a=AJE+xWI0");
     background-color: black;
-    background-size: 50%;
-    background-position: center 5rem;
+    background-size: 20%;
+    background-position: center 11rem;
     background-repeat: no-repeat;
     z-index: -20;
     width: 100vw;
@@ -157,9 +160,5 @@ hr {
   }
   h2.accordion-header {
     border-bottom: solid 0px $r-t2;
-    // box-shadow: 0px 1px 0px #29913a;
-    text-shadow: rgb(0, 0, 0) 0px 0 10px;
   }
 }
-
-// .contact-flex
