--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -18,3 +18,21 @@
   // text-decoration: none;
   color: $r-t2;
 }
+
+.socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.socials > a:hover,
+.socials > a {
+  margin-top: 0.4rem;
+  text-decoration: none;
+  color: $r-t2;
+}
+
+.social-icons {
+  display: flex;
+  gap: 1rem;
+}
